2012-08-23  Guillaume Lazzara  <z@lrde.epita.fr>

	* mln/data/compute_in_window.hh: Fix warnings.

2012-05-10  Guillaume Lazzara  <z@lrde.epita.fr>

	Rely on Argument-Dependent Lookup (ADL) in from_to_ overloads.

	* mln/accu/count_labels.hh,
	* mln/convert/from_to.hxx	,
	* mln/convert/to.hh,
	* mln/core/alias/point1d.hh,
	* mln/core/alias/point2d.hh,
	* mln/core/alias/point3d.hh,
	* mln/core/dpoint.hh,
	* mln/core/internal/neighborhood_base.hh,
	* mln/core/point.hh,
	* mln/core/site_set/p_centered.hh,
	* mln/core/site_set/p_vaccess.hh,
	* mln/fun/v2v/hsl_to_rgb.hh,
	* mln/fun/v2v/rgb_to_hsl.hh,
	* mln/io/magick/save.hh,
	* mln/io/plot/save.hh,
	* mln/labeling/blobs_and_compute.hh,
	* mln/labeling/value_and_compute.hh,
	* mln/make/w_window2d.hh,
	* mln/win/multiple.hh,
	* mln/win/multiple_size.hh,
	* tests/accu/site_set/rectangularity.cc,
	* tests/core/other/graph_elt_neighborhood.cc,
	* tests/core/other/graph_elt_window.cc,
	* tests/core/other/point_set_compatibility.cc,
	* tests/draw/graph.cc: Update forward declarations and includes.

	* mln/algebra/vec.hh,
	* mln/convert/from_to.hh,
	* mln/convert/impl/from_double_to_value.hh,
	* mln/convert/impl/from_float_to_value.hh,
	* mln/convert/impl/from_image_to_site_set.hh,
	* mln/convert/impl/from_int_to_value.hh,
	* mln/convert/impl/from_unsigned_to_value.hh,
	* mln/convert/impl/from_value_to_value.hh,
	* mln/core/alias/neighb2d.hh,
	* mln/core/alias/neighb3d.hh,
	* mln/core/alias/window1d.hh,
	* mln/core/alias/window2d.hh,
	* mln/core/alias/window3d.hh,
	* mln/core/concept/accumulator.hh,
	* mln/core/concept/gdpoint.hh,
	* mln/core/concept/gpoint.hh,
	* mln/core/concept/image.hh,
	* mln/core/concept/proxy.hh,
	* mln/core/concept/site_set.hh,
	* mln/core/concept/window.hh,
	* mln/core/image/graph_window_if_piter.hh,
	* mln/core/image/image1d.hh,
	* mln/core/mixed_neighb.hh,
	* mln/core/neighb.hh,
	* mln/core/site_set/operators.hh,
	* mln/core/w_window.hh,
	* mln/fun/i2v/array.hh,
	* mln/util/object_id.hh,